tests/errors/ref_in_variable.milo
// @error: type mismatch: 'r' declared as &i32 but got i32
fn main(): i32 {
    let x: i32 = 5
    let r: &i32 = x
    return 0
}
